syntax = "proto3";

package giftduels.duel.v1;

import "giftduels/duel/v1/duel.proto";
import "giftduels/shared/v1/common.proto";

option go_package = "github.com/peterparker2005/giftduels/packages/protobuf-go/gen/giftduels/duel/v1;duelv1";

service DuelPublicService {
  // GetDuel
  rpc GetDuel(GetDuelRequest) returns (GetDuelResponse);

  // GetDuelList
  rpc GetDuelList(GetDuelListRequest) returns (GetDuelListResponse);

  // CreateDuel
  rpc CreateDuel(CreateDuelRequest) returns (CreateDuelResponse);

  // RollDice
  rpc RollDice(RollDiceRequest) returns (RollDiceResponse);
}

message GetDuelRequest {
  shared.v1.DuelId id = 1;
}

message GetDuelResponse {
  Duel duel = 1;
}

message GetDuelListRequest {
  shared.v1.PageRequest page_request = 1;
}

message GetDuelListResponse {
  repeated Duel duels = 1;
}

message CreateDuelRequest {
  message Stake {
    shared.v1.GiftId gift_id = 1;
  }
  DuelParams params = 2;
  repeated Stake stakes = 3;
}

message CreateDuelResponse {
  shared.v1.DuelId duel_id = 1;
}

message RollDiceRequest {
  shared.v1.DuelId duel_id = 1;
}

message RollDiceResponse {
  Duel duel = 1;
  int32 dice_value = 2;
}
