syntax = "proto3";

package giftduels.telegrambot.v1;

import "giftduels/shared/v1/common.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/peterparker2005/giftduels/packages/protobuf-go/gen/giftduels/telegrambot/v1;telegrambotv1";

service TelegramBotPrivateService {
  rpc CreateStarInvoice(CreateStarInvoiceRequest) returns (CreateStarInvoiceResponse);
  rpc RollDice(RollDiceRequest) returns (RollDiceResponse);
}

message CreateStarInvoiceRequest {
  shared.v1.TelegramUserId telegram_user_id = 1;
  shared.v1.StarsAmount stars_amount = 2;
  string title = 3;
  string description = 4;
  // base64 encoded payload
  string payload = 5;
}

message CreateStarInvoiceResponse {
  string invoice_url = 1;
}

message RollDiceRequest {
  message Metadata {
    message Duel {
      shared.v1.DuelId duel_id = 1;
    }
    oneof game {
      Duel duel = 1;
    }
  }
  // who rolls (used for logging or signature)
  shared.v1.TelegramUserId roller_telegram_user_id = 1;
  Metadata metadata = 2;
}

message RollDiceResponse {
  int32 value = 1; // from 1 to 6
  int32 telegram_message_id = 2; // for logging
  string telegram_chat_id = 3; // for logging
  google.protobuf.Timestamp rolled_at = 4;
}
